@startuml

abstract class ToString {
    toString(): string
}
abstract class Print {
    print()
}
class PrintConsole {
}


interface GroupByObj {
    numerical: number;
    categorical: string;
}

GroupByObj --o PrintConsole

Print <|-- PrintConsole


ToString <|-- AverageCharLengthOfPostsPerMonth
GroupByObj <|-- AverageCharLengthOfPostsPerMonth
ToString <|-- LongestPostByCharacterLengthPerMonth
GroupByObj <|-- LongestPostByCharacterLengthPerMonth
ToString <|-- TotalPostsSplitByWeekNumber
GroupByObj <|-- TotalPostsSplitByWeekNumber
ToString <|-- AverageNumberOfPostsPerUserPerMonth
GroupByObj <|-- AverageNumberOfPostsPerUserPerMonth

@enduml